[gd_scene load_steps=3 format=3 uid="uid://buexyes1bo6cg"]

[ext_resource type="Script" uid="uid://cymgxqnv7063w" path="res://tensorflowPuzless/initializer.gd" id="1_nymcd"]
[ext_resource type="ButtonGroup" uid="uid://ci2nmlufpuotu" path="res://new_button_group_initializer.tres" id="2_6a38g"]

[node name="initializer" type="Control"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nymcd")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="naglowek_Label" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer/HSplitContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HSplitContainer/HSplitContainer"]
layout_mode = 2

[node name="shared_CheckBox" type="CheckBox" parent="VBoxContainer/HSplitContainer/HSplitContainer"]
layout_mode = 2
button_group = ExtResource("2_6a38g")

[node name="HSplitContainer2" type="HSplitContainer" parent="VBoxContainer/HSplitContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HSplitContainer/HSplitContainer2"]
layout_mode = 2

[node name="self_CheckBox" type="CheckBox" parent="VBoxContainer/HSplitContainer/HSplitContainer2"]
layout_mode = 2
button_group = ExtResource("2_6a38g")

[node name="OptionButton" type="OptionButton" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
